Add basic pulledpork conf

--- a/cfg/pulledpork.conf
+++ b/cfg/pulledpork.conf
@@ -18,7 +18,7 @@
 # i.e. url|tarball|123456789, 
 rule_url=https://www.snort.org/reg-rules/|snortrules-snapshot.tar.gz|<oinkcode>
 # NEW Community ruleset:
-rule_url=https://snort.org/downloads/community/|community-rules.tar.gz|Community
+#rule_url=https://snort.org/downloads/community/|community-rules.tar.gz|Community
 # NEW For IP Block lists! Note the format is urltofile|IPBLOCKLIST|<oinkcode>
 # This format MUST be followed to let pulledpork know that this is a blocklist
 rule_url=https://snort.org/downloads/ip-block-list|IPBLOCKLIST|open
@@ -49,7 +49,7 @@ rule_url=https://snort.org/downloads/ip-block-list|IPBLOCKLIST|open
 # and netbios gid-1 rules (while including netbios so-rules):
 # ignore = dos,sensitive-data.preproc,p2p.so,netbios.rules
 # These defaults are reasonable for the VRT ruleset with Snort 2.9.0.x.
-ignore=deleted.rules,experimental.rules,local.rules
+ignore=snort3-deleted.rules,snort3-experimental.rules
 # IMPORTANT, if you are NOT yet using 2.8.6 then you MUST comment out the
 # previous ignore line and uncomment the following!
 # ignore=deleted,experimental,local,decoder,preprocessor,sensitive-data
@@ -84,10 +84,10 @@ rule_path=/usr/local/etc/snort/rules/snort.rules
 # files that are local to your system here by adding a comma and more paths...
 # remember that the FULL path must be specified for EACH value.
 # local_rules=/path/to/these.rules,/path/to/those.rules
-local_rules=/usr/local/etc/snort/rules/local.rules
+local_rules=/usr/local/snort/rules/local.rules
 
 # Where should I put the sid-msg.map file?
-sid_msg=/usr/local/etc/snort/sid-msg.map
+sid_msg=/usr/local/snort/etc/snort/sid-msg.map
 
 # New for by2 and more advanced msg mapping.  Valid options are 1 or 2
 # specify version 2 if you are running barnyard2.2+.  Otherwise use 1
@@ -110,11 +110,11 @@ sid_changelog=/var/log/sid_changes.log
 sorule_path=/usr/local/lib/snort_dynamicrules/
 
 # Path to the snort binary, we need this to generate the stub files
-snort_path=/usr/local/bin/snort
+snort_path=/usr/local/snort/bin/snort
 
 # We need to know where your snort.conf file lives so that we can
 # generate the stub files
-config_path=/usr/local/etc/snort/snort.conf
+config_path=/usr/local/snort/etc/snort/snort.lua
 
 ##### Deprecated - The stubs are now  categorically written to the  single rule file!
 # sostub_path=/usr/local/etc/snort/rules/so_rules.rules
@@ -131,7 +131,7 @@ config_path=/usr/local/etc/snort/snort.conf
 # RHEL-6, RHEL-7, RHEL-8
 # Slackware-14-2
 # Ubuntu-14-4, Ubuntu-16-4, Ubuntu-17-10, Ubuntu-18-4
-distro=FreeBSD-12
+distro=Centos-8
 
 #######  This next section is optional, but probably pretty useful to you.
 #######  Please read thoroughly!
@@ -139,7 +139,7 @@ distro=FreeBSD-12
 # If you are using IP Reputation and getting some public lists, you will probably
 # want to tell pulledpork where your blocklist file lives, PP automagically will
 # de-dupe any duplicate IPs from different sources.
-block_list=/usr/local/etc/snort/rules/iplists/default.blocklist
+block_list=/usr/local/snort/intel/ip-blocklist
 
 # IP Reputation does NOT require a full snort HUP, it introduces a concept whereby
 # the IP list can be reloaded while snort is running through the use of a control
@@ -148,7 +148,7 @@ block_list=/usr/local/etc/snort/rules/iplists/default.blocklist
 # configure these!  The following option tells pulledpork where to place the version
 # file for use with control socket ip list reloads!
 # This should be the same path where your block_list lives!
-IPRVersion=/usr/local/etc/snort/rules/iplists
+IPRVersion=/usr/local/snort/intel/
 
 # The following option tells snort where the snort_control tool is located.
 snort_control=/usr/local/bin/snort_control
@@ -182,8 +182,8 @@ snort_control=/usr/local/bin/snort_control
 # Define the path to the pid files of any running process that you want to
 # sent a signal (specified with -H option) after PP has completed its run.
 # pid_path=/var/run/snort.pid,/var/run/barnyard.pid,/var/run/barnyard2.pid
-# and so on...
-# pid_path=/var/run/snort_eth0.pid
+# and so on... # pid_path=/var/run/snort_eth0.pid
+pid_path=/var/log/snort/snort.pid
 
 # This defines the version of snort that you are using, for use ONLY if the 
 # proper snort binary is not on the system that you are fetching the rules with
@@ -193,14 +193,14 @@ snort_control=/usr/local/bin/snort_control
 #
 # Suricata users - set this to 'suricata-5.x.x' to process rule files
 # for suricata, this mimics the -S flag on the command line.
-# snort_version=2.9.0.0
+# snort_version=3.1.0.0
 
 # Here you can specify what rule modification files to run automatically.
 # simply uncomment and specify the apt path.
-# enablesid=/usr/local/etc/snort/enablesid.conf
-# dropsid=/usr/local/etc/snort/dropsid.conf
-# disablesid=/usr/local/etc/snort/disablesid.conf
-# modifysid=/usr/local/etc/snort/modifysid.conf
+enablesid=/usr/local/etc/snort/enablesid.conf
+dropsid=/usr/local/etc/snort/dropsid.conf
+disablesid=/usr/local/etc/snort/disablesid.conf
+modifysid=/usr/local/etc/snort/modifysid.conf
 
 # What is the base ruleset that you want to use, please uncomment to use
 # and see the README.RULESETS for a description of the options.  
