Fix typo simples to simple

--- a/cfg/pulledpork3.conf
+++ b/cfg/pulledpork3.conf
@@ -17,7 +17,7 @@ snort_version = 3.1.47.0
 ips_policy = balanced
 
 # Rule Output mode: simple, policy (policy path is reqiured)
-rule_mode = simples
+rule_mode = simple
 #policy_path = /usr/local/snort/etc/rules/pulledpork.states
 
 rule_path = /usr/local/snort/etc/rules/snort.rules
